gpg's --assert-signer option would also make sense for gpgsm. On the ML an actual use case for this was reported.
Description
Description
Details
Details
Revisions and Commits
Revisions and Commits
rG GnuPG | |||
rG54e06273c0dc gpgsm: New option --assert-signer | |||
rG33e571a74a7d gpgsm: New option --assert-signer |
Related Objects
Related Objects
- Mentioned In
- T7030: Release GnuPG 2.4.6
T7191: Release GnuPG 2.5.1